--- a/res/layout/activity_find_class.xml
+++ b/res/layout/activity_find_class.xml
@@ -14,37 +14,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/findDegreeProgramButton"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/editButton"
-        android:layout_toStartOf="@+id/editButton" />
+        android:layout_centerHorizontal="true" />
     <Button
         android:text="Select  Course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/findCourseLevelButton"
         android:layout_below="@+id/findDegreeProgramButton"
-        android:layout_toLeftOf="@+id/editButton"
-        android:layout_toStartOf="@+id/editButton" />
+        android:layout_centerHorizontal="true" />
     <Button
         android:text="Select a Time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/findTimesButton"
         android:layout_below="@+id/findCourseLevelButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/editButton"
-        android:layout_toStartOf="@+id/editButton" />
+        android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="Submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/submitButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
     <Button
         android:text="Remove"
         android:layout_width="wrap_content"
@@ -58,8 +43,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignTop="@+id/removeButton"
+        android:layout_toRightOf="@+id/showMyCoursesButton"
+        android:layout_toEndOf="@+id/showMyCoursesButton" />
     <Button
         android:text="Show My Courses"
         android:layout_width="wrap_content"
