--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,36 +11,37 @@
         android:background="@drawable/shape"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        style="@style/Widget.AppCompat.Button.Colored" />
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_centerInParent="false" />
 
     <TextView android:id="@+id/choicesTextView"
         android:layout_width="fill_parent"
         android:textSize="15sp"
         android:layout_height="fill_parent"
         android:textStyle="bold"
-        android:background="@drawable/test2"
+        android:background="@drawable/test4"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Building Search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buildingSearchButton"
-        android:background="@drawable/shape"
-        android:layout_marginTop="28dp"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <Button
         android:text="WU Events"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:id="@+id/eventsButton"
         android:background="@drawable/shape"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="38dp" />
+
+    <Button
+        android:text="Building Search"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
+        android:id="@+id/buildingSearchButton"
+        android:background="@drawable/shape"
+        android:layout_marginTop="48dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/addClassButton" />
 </RelativeLayout>
