--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:textSize="15sp"
         android:layout_height="fill_parent"
         android:textStyle="bold"
-        android:background="@drawable/test4"
+        android:background="@drawable/vbckgrnd"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
